# polynomial

./: CMakeLists.txt
include/: Poly.h
src/: Poly.c
test/: TestPoly.cpp
